chart/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mongodb-ingressroute
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mongodb.admin.dev.ubivius.tk`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: mongodb
          kind: Service
          port: 27017
          namespace: default
  tls:
    secretName: mongodb.admin.dev.ubivius.tk
